Add projects page, new project creation page, map urls, add form model, add media root in settings file

--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -2,7 +2,7 @@
 {% block title %}Projects{% endblock title %}
 
 {% block content %}
-
+<a href="{% url 'new_project' %}" class="btn btn-primary">Add new project</a>
     {% for project in projects %}
         <div class="p-3">
             <img src="" alt="thumbnail">
