--- a/main/templates/new_project.html
+++ b/main/templates/new_project.html
@@ -1,8 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container">
+
     <form action="POST">
-        {{ form.as_div }}
+        {% csrf_token %}
+        <label for="name">Name: </label><br>
+        {{ form.name }}
+        <br><br>
+        <label for="description">Description: </label><br>
+        {{ form.description }}
+        <br><br>
         <button type="submit">Add Project</button>
     </form>
+</div>
 {% endblock content %}
