--- a/main/templates/new_project.html
+++ b/main/templates/new_project.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}Add new project{% endblock title %}
 {% block content %}
-<div class="container">
-
+<div class="container p-2">
+<a href="{% url 'projects' %}"  class="btn btn-primary">Back</a>
     <form action="{% url 'new_project' %}" class="" method="POST">
         {% csrf_token %}
         <label for="name">Name: </label><br>
@@ -11,10 +12,10 @@
         <label for="description">Description: </label><br>
         {{ form.description }}
         <br>
-        <label for="Status">Status: </label>
+        <label for="Status">Click if the project completed: </label>
         {{ form.is_completed }}
-        <br>
-        <button type="submit">Add Project</button>
+        <br><br>
+        <button class="btn btn-primary" type="submit">Add Project</button>
     </form>
 </div>
 
