--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -10,7 +10,7 @@
         class="bg-body-tertiary d-md-flex justify-content-around me-auto p-5 text-md-left"
       >
         <img
-          src="{% static 'media/bds.jpg' %}"
+          src="{% static 'assets/bds.jpg' %}"
           style="width: 300px; height: 300px"
           alt="brand CEO"
         />
@@ -51,7 +51,7 @@
 
           <div class="card m-2" style="width: 20rem">
             <img
-              src="{% static "media/paint-prod.jpeg" %}"
+              src="{% static "assets/paint-prod.jpeg" %}"
               alt="paints"
               class="card-img-top"
             />
@@ -66,7 +66,7 @@
 
           <div class="card m-2" style="width: 20rem">
             <img
-              src="{% static "media/wallpaper.jpeg" %}"
+              src="{% static "assets/wallpaper.jpeg" %}"
               alt="wallpaper"
               class="card-img-top"
             />
@@ -81,7 +81,7 @@
 
           <div class="card m-2" style="width: 20rem">
             <img
-              src="{% static "media/window-blind.jpeg" %}"
+              src="{% static "assets/window-blind.jpeg" %}"
               alt="window blind"
               class="card-img-top"
             />
