--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -6,9 +6,11 @@
 <div class="container p-3">
 
     <a href="{% url 'new_project' %}" class="btn btn-primary">Add new project</a>
+<div class="d-flex justify-content-around flex-wrap flex-md-row">
+
         {% for project in projects %}
-            <div class="p-3">
-                <img src="{{}}" alt="thumbnail">
+            <div class="p-3 ">
+                <img src="{{ project.images.url }}" alt="{{ project.name }}" style="width: 200px; height: 200px;">
                 <div class="p-1">
                     <h3>{{ project.name }}</h3>
                     <p>{{ project.description }}</p>
@@ -21,6 +23,7 @@
                 {% comment %} <a href="{% url 'edit_project' project.id %}" class="btn btn-primary">Edit Project</a> {% endcomment %}
             </div>
         {% endfor %}
+    </div>
 </div>
     
 {% endblock %}
