--- a/main/templates/edit_project.html
+++ b/main/templates/edit_project.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h2>Edit Project</h2>
 
-<form action="{% url 'edit_project' project.id %}" method="post">
+<form action="{% url 'edit_project' project.id %}" method="POST">
     {% csrf_token %}
     {{ form.as_div}}
     <button>Save</button>
