--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -96,6 +96,28 @@
         </div>
       </div>
 
+      {% comment %} Projects {% endcomment %}
+
+      <h2 class="text-center p-2">My Projects</h2>
+      <div class="d-flex justify-content-around flex-wrap flex-md-row">
+
+        {% for project in projects %}
+            <div class="p-3 ">
+              
+              <img src="{{ project.images.url }}" alt="{{ project.name }}" style="width: 200px; height: 200px; border-radius: 30px;">
+                <div class="p-1">
+                    <h3>{{ project.name }}</h3>
+                    <p>{{ project.description }}</p>
+                    {% if project.is_completed %}
+                        <h6>Completed</h6>
+                    {% else %}
+                        <h6>In Progress</h6>
+                    {% endif %}
+                </div>
+            </div>
+        {% endfor %}``
+    </div>
+
       <!-- About, Contact and location section -->
       <div class="container-fluid p-4 bg-light">
         <!-- About Us Section -->
