--- a/main/templates/new_project.html
+++ b/main/templates/new_project.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container p-2">
 <a href="{% url 'projects' %}"  class="btn btn-primary">Back</a>
-    <form action="{% url 'new_project' %}" class="" method="POST">
+    <form action="{% url 'new_project' %}" class="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <label for="name">Name: </label><br>
         {{ form.name }}
@@ -14,6 +14,9 @@
         <br>
         <label for="Status">Click if the project completed: </label>
         {{ form.is_completed }}
+        <br>
+        <label for="images">Image:</label><br>
+        {{ form.images }}
         <br><br>
         <button class="btn btn-primary" type="submit">Add Project</button>
     </form>
